samples/_failures_safe/1761151421_b0f532_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_782554a1.c: In function ‘main’:
./samples/SAFE/__tmp_782554a1.c:152: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_782554a1.c:151:9: error: expected declaration or statement at end of input
  151 |         unsigned char decompressed[MAX_INPUT_SIZE
      |         ^~~~~~~~
./samples/SAFE/__tmp_782554a1.c:151:9: error: expected declaration or statement at end of input
